dark mode fix

--- a/public/css/base/color.css
+++ b/public/css/base/color.css
@@ -20,8 +20,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+		--off-white: var(--color-gray-17);
 		--orange-red: rgb(106, 38, 253);
-    --bg-color: var(--color-gray-17);
+    --bg-color: var(--color-gray-19);
 		/* --nav-indicator-hover: #000; */
     --text-color: var(--color-gray-224);
     --text-color-link-active: #a1a1fc;
