--- a/public/css/components/nav.css
+++ b/public/css/components/nav.css
@@ -2,7 +2,7 @@ header.main-navigation {
 	position: sticky;
 	top: 0;
 	padding: 0.25em 0;
-	background-color: var(--color-gray-17);
+	background-color: var(--off-white);
   border-bottom: var(--border);
 }
 
